--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"./src/**/*.{js,ts,jsx,tsx,mjs,cjs,json}\""
   },
   "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@spaceymonk/react-radial-menu": "^2.0.6",
     "@tailwindcss/postcss": "^4.0.11",
     "react": "^19.0.0",
