--- a/ui/package.json
+++ b/ui/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@phosphor-icons/react": "^2.1.7",
     "@spaceymonk/react-radial-menu": "^2.0.6",
     "@tailwindcss/postcss": "^4.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "react-tiny-popover": "^8.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
