--- a/ui/package.json
+++ b/ui/package.json
@@ -14,27 +14,28 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@phosphor-icons/react": "^2.1.7",
     "@spaceymonk/react-radial-menu": "^2.0.6",
-    "@tailwindcss/postcss": "^4.0.11",
+    "@tailwindcss/postcss": "^4.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0",
+    "react-router": "^7.3.0",
     "react-tiny-popover": "^8.1.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
+    "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.0.11",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "tailwindcss": "^4.0.12",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.26.0",
+    "vite": "^6.2.1",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
