--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0",
+    "react-text-to-speech": "^1.4.1",
     "react-tiny-popover": "^8.1.6"
   },
   "devDependencies": {
