--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -30,6 +30,6 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan ${{ SERVER_HOST }} >> ~/.ssh/known_hosts
+        ssh-keyscan ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
         rsync -avz --delete --progress .dist Dockerfile nginx.conf ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/project/ui
         ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "cd ~/project && docker compose restart && docker system prune -af"
