--- a/ui/package.json
+++ b/ui/package.json
@@ -37,5 +37,11 @@
     "typescript-eslint": "^8.26.0",
     "vite": "^6.2.1",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild"
+    ]
   }
 }
